--- a/cordapp/.gitignore
+++ b/cordapp/.gitignore
@@ -54,10 +54,10 @@ lib/dokka.jar
 ## Plugin-specific files:
 
 # IntelliJ
-cordapp/out/
-cordapp/workflows/out/
-cordapp/contracts/out/
-cordapp/clients/out/
+/out/
+workflows/out/
+contracts/out/
+clients/out/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -71,56 +71,7 @@ crashlytics.properties
 crashlytics-build.properties
 
 # docs related
-cordapp/docs/virtualenv/
+docs/virtualenv/
 
 # if you use the installQuasar task
-cordapp/lib
-
-
-#-----------------Flutter ----------------------
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.packages
-.pub-cache/
-.pub/
-web-app/build/
-
-# Web related
-web-app/lib/generated_plugin_registrant.dart
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-web-app/android/app/debug
-web-app/android/app/profile
-web-app/android/app/release
+lib
