--- a/cordapp/build.gradle
+++ b/cordapp/build.gradle
@@ -120,24 +120,34 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         }
     }
     node {
-        name "O=PartyA,L=London,C=GB"
-        p2pPort 10005
+        name "O=Bank of England,L=London,C=GB"
+        p2pPort 10004
         rpcSettings {
-            address("localhost:10006")
-            adminAddress("localhost:10046")
+            address("localhost:10005")
+            adminAddress("localhost:10045")
         }
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
         extraConfig = ['h2Settings.address' : 'localhost:20041']
     }
     node {
-        name "O=PartyB,L=New York,C=US"
+        name "O=Citi,L=New York,C=US"
+        p2pPort 10006
+        rpcSettings {
+            address("localhost:10007")
+            adminAddress("localhost:10047")
+        }
+        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
+        extraConfig = ['h2Settings.address' : 'localhost:20042']
+    }
+    node {
+        name "O=HDFC,L=New Delhi,C=IN"
         p2pPort 10008
         rpcSettings {
             address("localhost:10009")
             adminAddress("localhost:10049")
         }
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
-        extraConfig = ['h2Settings.address' : 'localhost:20042']
+        extraConfig = ['h2Settings.address' : 'localhost:20043']
     }
 
 }
